src/markdown/snapshots/shiba_preview__markdown__parser__tests__autolink.snap
---
source: src/markdown/parser.rs
expression: json
---
{
  "kind": "render_tree",
  "tree": [
    {
      "c": [
        {
          "auto": true,
          "c": [
            "https://example.com"
          ],
          "href": "https://example.com",
          "t": "a"
        },
        " is standard auto link."
      ],
      "t": "p"
    },
    {
      "c": [
        {
          "auto": true,
          "c": [
            "https://example.com"
          ],
          "href": "https://example.com",
          "t": "a"
        },
        " is implicit auto link (GFM extention)."
      ],
      "t": "p"
    }
  ]
}
