src/markdown/snapshots/shiba_preview__markdown__parser__tests__escaped_chars_in_text.snap
---
source: src/markdown/parser.rs
expression: json
---
{
  "kind": "render_tree",
  "tree": [
    {
      "c": [
        "This line's text contains the single quote."
      ],
      "t": "p"
    },
    {
      "c": [
        "This line contains ",
        "\\ several \" escaped \t things!"
      ],
      "t": "p"
    }
  ]
}
