src/markdown/snapshots/shiba_preview__markdown__parser__tests__inline_code.snap
---
source: src/markdown/parser.rs
expression: json
---
{
  "kind": "render_tree",
  "tree": [
    {
      "c": [
        {
          "c": [
            "this"
          ],
          "t": "code"
        },
        " is ",
        {
          "c": [
            "inline code"
          ],
          "t": "code"
        },
        "."
      ],
      "t": "p"
    }
  ]
}
